--- a/c#2023/c#2023.csproj
+++ b/c#2023/c#2023.csproj
@@ -18,6 +18,9 @@
     <None Update="day3\input3.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="day4\input4.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
